ApacheCamelExamples/ApacheCamelKafka/src/test/resources/kube/ms-k8s-quarkus-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/kafka-network: "true"
  podSelector:
    matchLabels:
      network/kafka-network: "true"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: zookeeper
  name: zookeeper
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      service: zookeeper
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: zookeeper
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - name: zookeeper
          imagePullPolicy: Always
          image: zookeeper
          ports:
            - containerPort: 2181
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/zookeeper/data
              name: zookeeper-data
            - mountPath: /var/lib/zookeeper/log
              name: zookeeper-log
      hostname: zookeeper
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: zookeeper-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1024Mi
    - metadata:
        name: zookeeper-log
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zookeeper
  name: zookeeper
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    service: zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: kafka
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      service: kafka
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: kafka
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - name: kafka
          imagePullPolicy: IfNotPresent
          image: bitnami/kafka:latest
          ports:
            - containerPort: 29092
            - containerPort: 9092
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/kafka/
              name: kafka-data
      hostname: kafka
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kafka
  name: kafka
spec:
  clusterIP: None
  selector:
    service: kafka
  ports:
    - name: internal
      port: 29092
      targetPort: 29092
    - name: external
      port: 30092
      targetPort: 9092
---
# ... Deployment YAML definition
#run:   kubectl apply -f deployment.yaml
#scale: kubectl scale deployment --replicas=2 ms-k8s-cml-qks-kafka
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-k8s-cml-qks-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-k8s-cml-qks-kafka
  template:
    metadata:
      labels:
        app: ms-k8s-cml-qks-kafka
    spec:
      serviceAccount: ms-k8s-cml-qks-kafka-service-account
      serviceAccountName: ms-k8s-cml-qks-kafka-service-account
      automountServiceAccountToken: true
      containers:
        - name: ms-k8s-cml-qks-kafka
          imagePullPolicy: Always
          image: deesebc/ms-camel-quarkus-kafka
---
# ... Service YAML definition
#run: kubectl apply -f service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-k8s-cml-qks-kafka-service
spec:
  type: NodePort
  selector:
    app: ms-k8s-cml-qks-kafka
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30000

# curl --location 'http://localhost:30000/q/health/live'
